--- a/plugin.yml
+++ b/plugin.yml
@@ -15,28 +15,8 @@ permissions:
     shopkeeper.reload:
         description: Reloads the plugin
         default: op
-    shopkeeper.admin:
-        description: Create and modify an admin shopkeeper
-        default: op
-    shopkeeper.player:
-        description: Create and modify any player shopkeeper
-        default: false
-        children:
-            shopkeeper.player.normal: true
-            shopkeeper.player.book: true
-            shopkeeper.player.buy: true
-            shopkeeper.player.trade: true
-    shopkeeper.player.normal:
-        description: Create and modify a normal player shopkeeper
-        default: true
-    shopkeeper.player.book:
-        description: Create and modify a book player shopkeeper
-        default: true
-    shopkeeper.player.buy:
-        description: Create and modify a buying player shopkeeper
-        default: true
-    shopkeeper.player.trade:
-        description: Create and modify a trading player shopkeeper
+    shopkeeper.create:
+        description: Create and modify a shopkeeper
         default: true
     shopkeeper.bypass:
         description: Bypass player shop restrictions
